# qkd_optical_network

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  test_sprs_comparison.py
.claude/: CLAUDE.md  architecture.md  settings.local.json
data/osa/: spectrum_16QAM.csv  spectrum_1_2026-04-03 11-12-48.csv
docs/: assumptions.md  formulas_fwm.md  formulas_nonlinear.md  formulas_signal.md  formulas_skr.md  formulas_sprs.md  parameters.md
reference/: Consumption_Dynamic.py  Optical_Fiber.py  qkd_network_env.py  sprs.py
reference/oopt-gnpy/docs/: model.rst
reference/qkd_optical_network/: .gitignore  CLAUDE.md  FORMULAS_REVISION.md  README.md  requirements.txt
reference/qkd_optical_network/constants/: __init__.py  fiber_parameters.py
reference/qkd_optical_network/physics/: __init__.py  fiber.py  signal.py
reference/qkd_optical_network/propagation/: __init__.py  effective_length.py  solver.py
reference/qkd_optical_network/tests/: README_TESTS.md  __init__.py  test_dispatcher.py  test_fwm.py  test_raman.py
reference/qkd_optical_network/validation/: __init__.py
scripts/: analyze_skr_variation.py  dash_utils.py  dash_workers.py  plot_fwm_noise.py  plot_fwm_noise_dash.py  plot_fwm_noise_dash_l.py  plot_fwm_noise_dash_q.py  plot_noise_dash_ch.py  plot_noise_dash_len.py  plot_noise_spectrum.py  plot_signal_tx.py  plot_skr_optimization_vs_distance.py  plot_skr_vs_distance.py
src/qkd_sim/: __init__.py
src/qkd_sim/config/: __init__.py  plot_config.py  schema.py
tests/: test_noise_continuous.py  test_noise_discrete.py  test_signal.py
(+39 files in other folders)
